--- a/fundoo/src/Components/User.css
+++ b/fundoo/src/Components/User.css
@@ -158,5 +158,17 @@ button:hover{
     word-spacing: 10px;
     color:cadetblue;
     padding-left: 60px;
-}     
+}   
+
+.searchbar{
+    margin-left: 30%;
+    
+    
+}
+ 
+#brand-image{
+    width: 40px;
+    height: 45px;
+
+}
 
