--- a/fundoo/src/Components/User.css
+++ b/fundoo/src/Components/User.css
@@ -43,9 +43,7 @@
 .login-forgot-password{
     padding-left:1px 
 }
-button:hover{
-    color: crimson;
-}
+/*   */
 /* .login{
     background-image: url("https://images.unsplash.com/photo-1541233349642-6e425fe6190e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80");
 } */
@@ -192,8 +190,8 @@ button:hover{
     width: 32px;
     height: 32px;
 }
-
+/* 
 button {
   margin: 25px 5px 20px 20px;
-}
+} */
 
