--- a/fundoo/src/Components/note.css
+++ b/fundoo/src/Components/note.css
@@ -1,7 +1,7 @@
 .main_div {
     display: flex;
     justify-content: center;
-    margin-top: 7em;
+    margin-top: 9em;
   }
   .main_card {
     padding: 5px;
@@ -12,19 +12,24 @@
     display: flex;
     /* justify-content: space-evenly; */
     align-items: center;
+    padding-bottom: 10px;
   }
   .icons {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    
    
   }
   .Inpute{
     /* display: flex; */
+    padding-bottom: 9px;
+    padding-left: 3px;
   }
   .iconChanges{
-    display: flex;
+    /* display: flex; */
     padding-left:49px ; 
+    padding-top: -15px;
   }
 
 
@@ -38,8 +43,9 @@
       padding-left: 195px;
   }
   .main_card1 {
-    padding: 5px;
-    height: 160px;
+    padding: 4px;
+    /* padding-top: 10px; */
+    height: 170px;
     width: 30em;
   }
   .notificationrow{
@@ -48,3 +54,42 @@
     justify-content: space-between;
 
   }
+
+  /* dispaycard */
+
+  .main_card11{
+    margin-top: 2.5em;
+    margin-left: 10em;
+    /* justify-content:space-evenly */
+    
+
+  }
+  .main_card12{
+    width: 15em;
+    height: 7em;
+    justify-content: space-around;
+    padding:5px;
+    margin:2%
+  }
+  .fist_row_card{
+    display: flex;
+    padding-left:11px ;
+    
+  }
+  .second_row_card{
+    padding-left:11px ;
+  }
+  .finalrow_card{
+    display: flex;
+    justify-content: space-between;
+  }
+  .icon_1st_row{
+    padding-left: 6.5em;
+  }
+  /* .title_space{
+    padding-top: 10px;
+  } */
+.getNotesContainer{
+  display:flex;
+  flex-wrap: wrap;
+}
