--- a/fundoo/src/Components/note.css
+++ b/fundoo/src/Components/note.css
@@ -66,7 +66,7 @@
   }
   .main_card12{
     width: 15em;
-    height: 7em;
+    height: 7.5em;
     justify-content: space-around;
     padding:5px;
     margin:2%
@@ -90,6 +90,25 @@
     padding-top: 10px;
   } */
 .getNotesContainer{
+  padding-top: 9px;
   display:flex;
   flex-wrap: wrap;
+  
+}
+
+/* DilogBox_Css */
+
+.dilogBox_fistrow{
+  display: flex;
+  /* height: 30%;
+  width: 70%; */
+}
+
+.dilogBox_third_row{
+  display: flex;
+}
+
+.dilog_card{
+  width: 100%;
+  height: 90%;
 }
