--- a/fundoo/src/Components/note.css
+++ b/fundoo/src/Components/note.css
@@ -117,5 +117,30 @@
 }
 .colour_row{
   display: flex;
+  /* height: 50%; */
+  /* width: 50%; */
+  /* flex-wrap: wrap; */
+  /* margin-top: 3%; */
+  flex-wrap: wrap;
+  /* margin-left: 38%; */
+  /* padding-left: 40%; */
   
+  
+}
+.ColourBox{
+   /* width:15%;
+  height:40%; */
+  
+  margin-top: 13%;
+  margin-left: 40%
+  /* padding-left: %; */
+  /* display: flex; */
+}
+.Menu_{
+  margin-left: 47%;
+ 
+}
+.colour_row1{
+  
+  display: flex;
 }
