--- a/fundoo/src/Components/App&SideNav.css
+++ b/fundoo/src/Components/App&SideNav.css
@@ -1,13 +1,63 @@
 .InputeBase{
     padding-top: 1% ;
-    padding-left: 30%;
-    padding-bottom: 1%;
+    padding-left: 1%;
+    padding-bottom: .5%;
+    display: flex;
    
 }
+/* .App_Card{
+   
+} */
 .InputeBase2{
-   height: 5%;
-   width: 40%;
+   height: 4%;
+   width: 90%;
+   padding-top: .5%;
+   padding-bottom: .5%;
+   padding-left: 2%;
 }
 .Serach_Card{
     width: 70%;
+    height: 4%;
 }
+/* .serach_card1{
+    height: 20%;
+} */
+.Serach_Icon{
+    padding-left: 1%;
+}
+.sideIcons{
+    display: flex;
+    width: 5%;
+}
+.RefreshIcon{
+    padding-left: 29%;
+    padding-top: 8%;
+}
+.lastIcon{
+    padding-left: 15%;
+    /* padding-top: 18%; */
+    display: flex;
+}
+.menuIcon{
+    padding-top: 0%;
+    padding-right: 1%;
+    
+}
+.images{
+    height: 2%;
+}
+.name{
+    padding-top: 7.5px;
+    padding-right: 6%;
+    padding-left: 1%;
+    color: dimgrey;
+
+}
+
+              /* Sidenav css */
+
+.Drawer{
+   width: 20%;
+   margin: 20%;
+   padding-right: 20%;
+}              
