--- a/fundoo/src/Components/App&SideNav.css
+++ b/fundoo/src/Components/App&SideNav.css
@@ -63,11 +63,11 @@
    height: 100%;
    background: white;
    box-shadow: -2px 0px 1px;
-   
+  position: relative;
    top:0;
    left: 0;
    width: 197px;
-   margin-top: 2px;
+   margin-top: 69px;
 }  
 
 .swipeableDrawer{
