--- a/fundoo/src/Components/note.css
+++ b/fundoo/src/Components/note.css
@@ -189,4 +189,13 @@
     padding-top:2%;
    color: dimgrey; 
    font-size: 2;
-  }                                
+  }  
+  
+  
+  /* Collaboratore */
+
+  .Collaboratore{
+    width: 100%;
+    height: 20%;
+  }
+ 
