--- a/fundoo/src/Components/Demo.css
+++ b/fundoo/src/Components/Demo.css
@@ -17,3 +17,22 @@
 .sideBar_demo.active{
     left:0px
 }
+
+
+/* ................................................. */
+
+.drawer{
+    width: 100%;
+    /* margin-top: 10%; */
+
+}
+.fistrow{
+    display: flex;
+    padding-left: 7%;
+    padding-top:9%;
+    padding-right: 100%;
+}
+.NoteName{
+    padding-left: 30%;
+
+}
