--- a/fundoo/src/Components/Note.css
+++ b/fundoo/src/Components/Note.css
@@ -392,3 +392,35 @@
  .row{
 
  }
+
+ .archivemargin{
+   margin-left: 15%;
+ }
+
+ /* .......................................Reminder...................................... */
+
+ .reminderCard{
+   width: 250px;
+ }
+
+ .fistrow{
+   display: flex;
+ }
+ .time{
+   padding-left: 100px;
+ }
+
+ .reminderfist{
+   padding-left: 16px;
+   padding-bottom: 15px;
+ }
+ .dateFistRow{
+   display: flex;
+ }
+
+ .fistrowname{
+   padding-left: 10px;
+   padding-right: 91px;
+ }
+
+ 
